# robo_ball_catcher

./: CMakeLists.txt  README.md  package.xml
ball_chaser/: CMakeLists.txt  package.xml
ball_chaser/include/ball_chaser/: drive_bot.h  process_image.h
ball_chaser/launch/: ball_chaser.launch.xml
ball_chaser/src/: drive_bot.cpp  process_image.cpp
ball_chaser_description/: CMakeLists.txt  package.xml
ball_chaser_description/launch/: world.launch
ball_chaser_description/models/task_env/: model.config
ball_chaser_description/rviz/: ball_chaser.rviz
ball_chaser_description/urdf/: robo_seeker.gazebo  robo_seeker.urdf.xacro
ball_chaser_description/worlds/: env.world
ball_chaser_interface/: CMakeLists.txt  package.xml
launch/: world.launch
robo_ball_catcher/launch/: world.launch
robo_ball_catcher/models/task_env/: model.sdf
urdf/: robo_seeker.urdf.xacro
worlds/: task_env.world
